# LLM_security

./: .gitignore  CLEANUP_PLAN.md  DEPLOYMENT.md  FUTURE_SCOPE.md  GIT_PUSH_CHECKLIST.md  HOW_TO_RUN_PHASE_L.md  MEMORY_COMPARISON.md  OLLAMA_FIX.md  OLLAMA_SETUP.py  PHASE_L_CLOSURE.md  PHASE_L_INTEGRATION.md  PHASE_UQ_GUIDE.md  QUICKSTART.md  README.md  calibration_error.txt  compile_log.txt  error_output.txt  export_onnx.py  full_error.txt  laminar_server.py  latency_benchmark.py  phase_3_tests.py  phase_l_tests.py  phase_uq_tests.py  pyproject.toml  requirements.txt  server_simple.py  start.bat  start.sh  start_ollama.bat  test_persona_shift.py  test_pipeline.py
configs/: default.yaml
datasets/: calibration.jsonl
docs/: risk_calculation_system.md
docs/plans/: README.md  architecture_overview.md  current_system.md  implementation_status.md  intent_tracking_plan.md  memory_system_plan.md  quick_reference.md  risk_detection_plan.md  testing_guide.md
frontend/: app.js  index.html  styles.css
frontend/laminar/: app.js  index.html  styles.css
frontend/laminar_v4_legacy/: app.js  index.html
models/: conformal.json  safety_probe.pt
models/semantic_onnx/: config.json
scripts/: calibrate_uq.py
src/: __init__.py
src/llm/: __init__.py  base.py  deepseek_backend.py  dolphin_backend.py  dolphin_ollama.py  gemini_backend.py  hooks.py  mock_backend.py  ollama_backend.py  openrouter_backend.py  pythia_backend.py
src/logging/: __init__.py  metrics.py  structured.py
src/safety/: __init__.py
src/safety/alrc/: __init__.py  adaptive_normalizer.py  pipeline.py  (+8 more)
(+22 files in other folders)
